--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -6,17 +6,39 @@ trigger: none
 pr: none
 
 variables:
+- name: applicationName
+  value: verademo-azure
+- name: vid
+  value: testid
+- name: vkey
+  value: testkey
 - name: one
-  value: $[curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/maven-metadata.xml | findstr /r "latest";]
-
+  value: 23.1.10.5
 steps:
+  
   - script: |
       echo ${{ variables.one }} # outputs initialValue
       echo $(one)
     displayName: First variable pass
+
   - bash: echo "##vso[task.setvariable variable=one]secondValue"
     displayName: Set new variable value
+
   - script: |
       echo ${{ variables.one }} # outputs initialValue
       echo $(one) # outputs secondValue
     displayName: Second variable pass
+
+  - script: | 
+      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$version/vosp-api-wrappers-java-$(version)-dist.zip -o dist.zip
+    displayName: Downloading the latest version of the Veracode Java API
+  - task: ExtractFiles@1
+    inputs:
+      archiveFilePatterns: '**/*.zip'
+      destinationFolder: '.'
+      cleanDestinationFolder: true
+      overwriteExistingFiles: false
+
+  #- script: |
+  #     java -jar VeracodeJavaAPI.jar -vid $(vid) -vkey $(vkey) -action getapplist | tee appidlist.txt
+  #  displayName: Pulling the Sandbox ID List
