--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -21,13 +21,13 @@ steps:
       echo $(one)
     displayName: First variable pass
 
-  - bash: echo "##vso[task.setvariable variable=one]secondValue"
-    displayName: Set new variable value
+ # - bash: echo "##vso[task.setvariable variable=one]secondValue"
+ #   displayName: Set new variable value
 
-  - script: |
-      echo ${{ variables.one }} # outputs initialValue
-      echo $(one) # outputs secondValue
-    displayName: Second variable pass
+ # - script: |
+ #     echo ${{ variables.one }} # outputs initialValue
+ #     echo $(one) # outputs secondValue
+ #   displayName: Second variable pass
 
   - script: | 
       curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$version/vosp-api-wrappers-java-$(version)-dist.zip -o dist.zip
