--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -12,13 +12,13 @@ variables:
   value: testid
 - name: vkey
   value: testkey
-- name: one
+- name: wrapper_version
   value: 23.1.10.5
 steps:
   
   - script: |
-      echo ${{ variables.one }} # outputs initialValue
-      echo $(one)
+      echo ${{ variables.wrapper_version }} # outputs initialValue
+      echo $(wrapper_version)
     displayName: First variable pass
 
  # - bash: echo "##vso[task.setvariable variable=one]secondValue"
@@ -30,7 +30,7 @@ steps:
  #   displayName: Second variable pass
 
   - script: | 
-      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$version/vosp-api-wrappers-java-$(version)-dist.zip -o dist.zip
+      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$version/vosp-api-wrappers-java-$(wrapper_version)-dist.zip -o dist.zip
     displayName: Downloading the latest version of the Veracode Java API
   - task: ExtractFiles@1
     inputs:
