--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -18,9 +18,9 @@ steps:
   - script: java --version
     displayName: Report Java Version installed
     
-  - script: ls -la ${Build.SourcsDirectory}
-  - script: ls -la ${Build.ArtifactStagingDirectory}
-  - script: ls -la ${Build.BinariesDirectory}
+  - script: ls -la $(Build.SourcsDirectory)
+  - script: ls -la $(Build.ArtifactStagingDirectory)
+  - script: ls -la $(Build.BinariesDirectory)
 
   - script: |
       echo ${{ variables.wrapper_version }} # outputs initialValue
