Update azure-manual-promote-rc.yml for Azure Pipelines

--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -36,16 +36,16 @@ steps:
  #   displayName: Second variable pass
 
   - script: | 
-      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$version/vosp-api-wrappers-java-$(wrapper_version)-dist.zip -o dist.zip
+      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$version/vosp-api-wrappers-java-$(wrapper_version)-dist.zip -o $(Build.ArtifactStagingDirectory)/dist.zip
     displayName: Downloading the latest version of the Veracode Java API
     
   - script: ls -la
     displayName: Show Contents
   - task: ExtractFiles@1
     inputs:
-      archiveFilePatterns: '**/*.zip'
-      destinationFolder: '.'
-      cleanDestinationFolder: true
+      archiveFilePatterns: '$(Build.ArtifactStagingDirectory)/*.zip'
+      destinationFolder: '$(Build.BinariesDirectory)'
+      cleanDestinationFolder: false
       overwriteExistingFiles: false
 
   #- script: |
