--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -17,6 +17,8 @@ variables:
 steps:
   - script: java --version
     displayName: Report Java Version installed
+  - script: gzip --version
+  - script: 7z --version
     
   - script: ls -la $(Build.SourcesDirectory)
   - script: ls -la $(Build.ArtifactStagingDirectory)
