--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -53,7 +53,7 @@ steps:
   - task: ExtractFiles@1
     inputs:
       archiveFilePatterns: '$(Build.ArtifactStagingDirectory)/*.zip'
-      destinationFolder: '$(Build.BinariesDirectory)'
+      destinationFolder: .
       cleanDestinationFolder: false
       overwriteExistingFiles: false
 
