--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -42,7 +42,7 @@ steps:
   - script: |
       echo ##vso[task.setvariable variable=wrapper_version;isOutput=true]23.1.10.5
 
-  - script: |
+  - pwsh: |
       Write-Output "Downloading the latest version of the Veracode Java API"
           $versionstring = curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/maven-metadata.xml | Out-String -Stream | Select-String -Pattern 'latest';
           $wrapper_version = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
