Update azure-manual-promote-rc.yml for Azure Pipelines

--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -18,10 +18,6 @@ steps:
   - script: java --version
     continueOnError: true
     displayName: Report Java Version installed
-  - script: gzip --version
-    continueOnError: true
-  - script: 7z --version
-    continueOnError: true
     
   - script: ls -la $(Build.SourcesDirectory)
   - script: ls -la $(Build.ArtifactStagingDirectory)
@@ -39,18 +35,17 @@ steps:
  #     echo ${{ variables.one }} # outputs initialValue
  #     echo $(one) # outputs secondValue
  #   displayName: Second variable pass
-  - script: |
-      echo ##vso[task.setvariable variable=wrapper_version;isOutput=true]23.1.10.5
 
   - pwsh: |
       Write-Output "Downloading the latest version of the Veracode Java API"
           $versionstring = curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/maven-metadata.xml | Out-String -Stream | Select-String -Pattern 'latest';
           $wrapper_version = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
-          echo $wrapper_version
+          ##vso[task.setvariable variable=wrapper_version;isOutput=true] $wrapper_version;
     displayName: Team
     enabled: true
     
   - script: |
+      echo $WRAPPER_VERSION
       curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$WRAPPER_VERSION/vosp-api-wrappers-java-$WRAPPER_VERSION-dist.zip -o $(Build.ArtifactStagingDirectory)/dist.zip
     displayName: Downloading the latest version of the Veracode Java API
     enabled: true     
