--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -12,8 +12,6 @@ variables:
   value: testid
 - name: vkey
   value: testkey
-- name: wrapper_version
-  value: 23.1.10.5
 steps:
   - script: java --version
     continueOnError: true
@@ -22,19 +20,6 @@ steps:
   - script: ls -la $(Build.SourcesDirectory)
   - script: ls -la $(Build.ArtifactStagingDirectory)
   - script: ls -la $(Build.BinariesDirectory)
-
-  - script: |
-      echo ${{ variables.wrapper_version }} # outputs initialValue
-      echo $(wrapper_version)
-    displayName: First variable pass
-
- # - bash: echo "##vso[task.setvariable variable=one]secondValue"
- #   displayName: Set new variable value
-
- # - script: |
- #     echo ${{ variables.one }} # outputs initialValue
- #     echo $(one) # outputs secondValue
- #   displayName: Second variable pass
 
   - pwsh: |
       Write-Output "Downloading the latest version of the Veracode Java API"
@@ -51,23 +36,19 @@ steps:
     enabled: true     
   
   - script: ls -la $(Build.ArtifactStagingDirectory)
-    displayName: Show Contents
-  
+    displayName: Show Artifact Directory Content
+
   - script: |
       7z e $(Build.ArtifactStagingDirectory)/dist.zip -o$(Build.ArtifactStagingDirectory)/extract/ -y
     displayName: Uncompressiong File  
     enabled: true
+
+  - script: ls -la $(Build.ArtifactStagingDirectory)/extract/
+    displayName: Show Extract Directory Content
     
   - script: ls -la $(Build.SourcesDirectory)
   - script: ls -la $(Build.ArtifactStagingDirectory)
   - script: ls -la $(Build.BinariesDirectory)
-  - task: ExtractFiles@1
-    inputs:
-      archiveFilePatterns: '$(Build.ArtifactStagingDirectory)/*.zip'
-      destinationFolder: .
-      cleanDestinationFolder: false
-      overwriteExistingFiles: false
-
   - script: ls -la $(Build.SourcesDirectory)
   - script: ls -la $(Build.ArtifactStagingDirectory)
   - script: ls -la $(Build.BinariesDirectory)
@@ -75,3 +56,14 @@ steps:
   #- script: |
   #     java -jar VeracodeJavaAPI.jar -vid $(vid) -vkey $(vkey) -action getapplist | tee appidlist.txt
   #  displayName: Pulling the Sandbox ID List
+  - pwsh: |
+      $(Build.ArtifactStagingDirectory)/extract/java --version
+    #-jar VeracodeJavaAPI.jar -vid $(vid) -vkey $(vkey) -action getapplist | tee appidlist.txt
+    #    $veracodeappid = (Get-Content .\appidlist.txt | Select-String $appname).Line.Split('"')[1]
+    #    Write-Output "Pulling the Sandbox ID List"
+  
+
+  #- pwsh: |
+  #    java -jar VeracodeJavaAPI.jar -vid $(vid) -vkey $(vkey) -action getsandboxlist -appid $veracodeappid | tee sandboxlist.txt
+  #        $veracodesandboxid = (Get-Content .\sandboxlist.txt | Select-String -Pattern "sandbox_id=").Line.Split('"')[9] | Select-Object -Last 1
+  #        Write-Output "Pulling the Build ID List"
