Update azure-manual-promote-rc.yml for Azure Pipelines

--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -43,6 +43,8 @@ steps:
     displayName: Uncompressiong File  
     enabled: true
 
+  - script: sleep 30
+  
   - script: ls -la $(Build.ArtifactStagingDirectory)/extract/
     displayName: Show Extract Directory Content
     
