Update azure-manual-promote-rc.yml for Azure Pipelines

--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -24,13 +24,16 @@ steps:
   - pwsh: |
       Write-Output "Downloading the latest version of the Veracode Java API"
           $versionstring = curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/maven-metadata.xml | Out-String -Stream | Select-String -Pattern 'latest';
-          $wrapper_version = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
-          ##vso[task.setvariable variable=wrapper_version;isOutput=true]$wrapper_version
+          $wrapperversion = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
+          echo $wrapperversion
+          ##vso[task.setvariable variable=wrapper_version;isOutput=true]$wrapperversion
     displayName: Get meta-data on the latest version of the Veracode Java API
     enabled: true
     
   - script: |
-      echo $WRAPPER_VERSION
+      echo $WRAPPER_VERSION;
+      echo $wrapper_version;
+      echo $[wrapper_version]
       curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$WRAPPER_VERSION/vosp-api-wrappers-java-$WRAPPER_VERSION-dist.zip -o $(Build.ArtifactStagingDirectory)/dist.zip
     displayName: Downloading the latest version of the Veracode Java API
     enabled: true     
