--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -27,6 +27,7 @@ steps:
           $wrapperversion = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
           echo $wrapperversion
           ##vso[task.setvariable variable=wrapper_version;isOutput=true]$wrapperversion
+          echo $WRAPPER_VERSION
     displayName: Get meta-data on the latest version of the Veracode Java API
     enabled: true
     
