--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -5,6 +5,7 @@ name:  'Promote Release Candidate Scan'
 trigger: none
 pr: none
 
+
 variables:
 - name: applicationName
   value: verademo-azure
@@ -26,7 +27,7 @@ steps:
           $versionstring = curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/maven-metadata.xml | Out-String -Stream | Select-String -Pattern 'latest';
           $wrapperversion = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
           echo $wrapperversion
-          ##vso[task.setvariable variable=wrapper_version;isOutput=true]$wrapperversion
+          echo "##vso[task.setvariable variable=wrapper_version;isOutput=true]$wrapperversion"
           echo $WRAPPER_VERSION
     displayName: Get meta-data on the latest version of the Veracode Java API
     enabled: true
