--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -24,21 +24,18 @@ steps:
 
   - pwsh: |
       $versionstring = curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/maven-metadata.xml | Out-String -Stream | Select-String -Pattern 'latest';
-      $wrapperversion = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
-      echo $wrapperversion
-      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/wrapperversion/vosp-api-wrappers-java-wrapperversion-dist.zip -o $(Build.ArtifactStagingDirectory)/dist.zip
-  
+      $wrapper_version = $versionstring -replace '\s','' -replace '<latest>','' -replace '</latest>','';
+      echo $wrapper_version
+      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/$WRAPPER_VERSION/vosp-api-wrappers-java-$WRAPPER_VERSION-dist.zip -o $(Build.ArtifactStagingDirectory)/dist.zip
+      7z e $(Build.ArtifactStagingDirectory)/dist.zip -o$(Build.ArtifactStagingDirectory)/extract/ -y
     displayName: Downloading the latest version of the Veracode Java API
     enabled: true
-
-  - script: sleep 10
-    displayName: Waiting for Download
-  
+ 
   - script: ls -la $(Build.ArtifactStagingDirectory)
     displayName: Show Artifact Directory Content
 
-  - script: |
-      7z e $(Build.ArtifactStagingDirectory)/dist.zip -o$(Build.ArtifactStagingDirectory)/extract/ -y
+  - script: | 
+      echo hello
     displayName: Uncompressiong File  
     enabled: true
   
