--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -35,7 +35,7 @@ steps:
     displayName: Show Artifact Directory Content
 
   - script: | 
-      echo hello
+      ls -la $(Build.ArtifactStagingDirectory)/extract
     displayName: Uncompressiong File  
     enabled: true
   
@@ -53,7 +53,7 @@ steps:
   #- script: |
   #     java -jar VeracodeJavaAPI.jar -vid $(vid) -vkey $(vkey) -action getapplist | tee appidlist.txt
   #  displayName: Pulling the Sandbox ID List
-  - pwsh: |
+  - script: |
       $(Build.ArtifactStagingDirectory)/extract/java --version
     #-jar VeracodeJavaAPI.jar -vid $(vid) -vkey $(vkey) -action getapplist | tee appidlist.txt
     #    $veracodeappid = (Get-Content .\appidlist.txt | Select-String $appname).Line.Split('"')[1]
