Update azure-manual-promote-rc.yml for Azure Pipelines

--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -15,7 +15,7 @@ parameters:
     default: ""
     type: string
   - name: appName
-    default: "verademo-react-azure-devops"
+    default: "verademo-react"
     type: string
   - name: sandboxName
     default: "Release Candidate"
