--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -66,7 +66,8 @@ steps:
     enabled: false
    
   - pwsh: |
-      $veracodeappid = (Get-Content .\appidlist.txt | Select-String $appname).Line.Split('"')[1]
+      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getapplist | tee appidlist.txt
+      $veracodeappid = (Get-Content .\appidlist.txt | Select-String "${{parameters.appName}}").Line.Split('"')[1]
       echo $veracodeappid
       java -jar VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getsandboxlist -appid $veracodeappid | tee sandboxlist.txt
     
